# pdf-splitter

./: .gitignore  .pypirc.template  GITHUB_RELEASES_GUIDE.md  PATH_INSTALLATION_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  PYPI_READY_SUMMARY.md  README.md  __init__.py  build_executable.ps1  build_executable.sh  build_executables.py  demo_progress.py  install_to_path.ps1  main.py  pdf-splitter.spec  prepare_release.py  publish.ps1  publish.sh  pyproject.toml  test_file_progress.py  test_progress.py
llm_context/: git_scape_click_digest.txt
release/windows/: README.md  install_to_path.bat
release_prep/: SHA256SUMS.txt  UPLOAD_INSTRUCTIONS.md  release_notes.md
