[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-splitter"
version = "0.1.0"
description = "A command-line tool to split PDF files into smaller chunks with automatic filename generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pypdf>=5.8.0",
]

[project.scripts]
pdf-splitter = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
package = true
